@@ -33,11 +33,11 @@
  * at least this much budget - see comment on refill_sufficient */
 #define MIN_BUDGET_US (2u * getKernelWcetUs() * CONFIG_KERNEL_WCET_SCALE)
 #define MIN_BUDGET    (2u * getKernelWcetTicks() * CONFIG_KERNEL_WCET_SCALE)
-#if (CONFIG_KERNEL_STATIC_MAX_BUDGET_US) != 0
-#define MAX_BUDGET_US (CONFIG_KERNEL_STATIC_MAX_BUDGET_US)
+#if (CONFIG_KERNEL_STATIC_MAX_PERIOD_US) != 0
+#define MAX_PERIOD_US (CONFIG_KERNEL_STATIC_MAX_PERIOD_US)
 #else
-#define MAX_BUDGET_US getMaxUsToTicks()
-#endif /* CONFIG_KERNEL_STATIC_MAX_BUDGET_US != 0 */
+#define MAX_PERIOD_US getMaxUsToTicks()
+#endif /* CONFIG_KERNEL_STATIC_MAX_PERIOD_US != 0 */
 
 /* Short hand for accessing refill queue items */
 static inline refill_t *refill_index(sched_context_t *sc, word_t index)
