@@ -116,19 +116,19 @@ static exception_t decodeSchedControl_ConfigureFlags(word_t length, cap_t cap, w
         return EXCEPTION_SYSCALL_ERROR;
     }
 
-    if (budget_us > MAX_BUDGET_US || budget_ticks < MIN_BUDGET) {
+    if (budget_us > MAX_PERIOD_US || budget_ticks < MIN_BUDGET) {
         userError("SchedControl_ConfigureFlags: budget out of range.");
         current_syscall_error.type = seL4_RangeError;
         current_syscall_error.rangeErrorMin = MIN_BUDGET_US;
-        current_syscall_error.rangeErrorMax = MAX_BUDGET_US;
+        current_syscall_error.rangeErrorMax = MAX_PERIOD_US;
         return EXCEPTION_SYSCALL_ERROR;
     }
 
-    if (period_us > MAX_BUDGET_US || period_ticks < MIN_BUDGET) {
+    if (period_us > MAX_PERIOD_US || period_ticks < MIN_BUDGET) {
         userError("SchedControl_ConfigureFlags: period out of range.");
         current_syscall_error.type = seL4_RangeError;
         current_syscall_error.rangeErrorMin = MIN_BUDGET_US;
-        current_syscall_error.rangeErrorMax = MAX_BUDGET_US;
+        current_syscall_error.rangeErrorMax = MAX_PERIOD_US;
         return EXCEPTION_SYSCALL_ERROR;
     }
 
